syntax = "proto3";

option go_package = "github.com/FitRang/profile-service/pb;pb";

service ProfileService {
    rpc CreateProfile(CreateRequest) returns (CreateResponse) {}
    rpc GetProfile(GetRequest) returns (GetResponse) {}
}

message CreateRequest {
    string id = 1;
    string name = 2;
    string email = 3;
    string phone_number = 4;
}

message CreateResponse {
    string id = 1;
    string status = 2; 
}

message GetRequest {
    string id = 1;
}

message GetResponse {
    oneof result {
        Profile profile = 1;      
        Error error = 2;          
    }
}

message Profile {
    string id = 1;
    string name = 2;
    string email = 3;
    string phone_number = 4;
    string created_at = 5;
}

message Error {
    string code = 1;              
    string message = 2;           
    map<string, string> details = 3;  
}
